Start taking out SSO

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,11 @@
-extends ../layout
+extends layout
 
 block content
     div.grid-row
         div.column-one-half
             h1.heading-xlarge Licences Application
 
-            div You are logged in
+            div Welcome
                 p For sale
                     ul.list.list-bullet
                         li Fish licence
