implemented visuals for summary page with hard coded mock data

--- a/server/views/dashboard/index.pug
+++ b/server/views/dashboard/index.pug
@@ -32,7 +32,7 @@ block content
                             | #{prisoner.dischargeDate}
 
                     td.requiredButton
-                        a.button.button-secondary(href="summary/"+prisoner.nomsId role="button")
+                        a.button.button-secondary(href="details/"+prisoner.nomsId role="button")
                             if prisoner.inProgress
                                 |Continue
                             else
