--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -12,3 +12,36 @@ a.button.button-secondary {
     min-width: 120px;
     text-align: center;
 }
+
+.block {
+    display: block;
+}
+
+.midMarginBottom {
+    margin-bottom: 20px;
+}
+
+.largeMarginBottom {
+    margin-bottom: 30px;
+}
+
+.paddingBottom {
+    padding-bottom: 30px;
+}
+
+.borderBottom {
+    border-bottom: solid $grey-1 2px;
+}
+
+.subText {
+    font-size: 80%;
+}
+
+#continueBtns a{
+    margin-right: 15px;
+}
+
+.inlineButtons > a, .inlineButtons > form {
+    padding-right: 15px;
+    float: left;
+}
