Use async await

--- a/server/views/dashboard/index.pug
+++ b/server/views/dashboard/index.pug
@@ -35,7 +35,7 @@ block content
                                     | #{moment(entry.dischargeDate).format('DD/MM/YYYY')}
 
                             td.requiredButton
-                                a.button.button-secondary(href="details/"+entry.nomsId role="button")
+                                a.button.button-secondary(href="details/"+entry.nomisId role="button")
                                     if entry.inProgress
                                         |Continue
                                     else
