Remove all SSO stuff

--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -5,10 +5,6 @@ block content
         div.column-one-half
             h1.heading-xlarge Licences Application
 
-            div Welcome
-                p For sale
-                    ul.list.list-bullet
-                        li Fish licence
-                        li Cat licence
+            a(href="/dashboard") Dashboard
 
 
