added additional conditions page

--- a/server/views/dischargeAddress/index.pug
+++ b/server/views/dischargeAddress/index.pug
@@ -41,7 +41,7 @@ block content
                 if (reason)
                     span#reason.block.bold #{reason}
 
-    form#acceptanceForm
+    form#acceptanceForm(method='POST')
         div.form-group
             fieldset.inline
                 legend.midMarginBottom Is this address acceptable?
