--- a/server/views/additionalConditions/index.pug
+++ b/server/views/additionalConditions/index.pug
@@ -11,10 +11,10 @@ block content
                 a(href="#") View the seven standard conditions
 
         div.column-one-third
-            a.button.button-secondary(href="/reporting/"+licenceId role="button") No additional conditions required
+            a.button.button-secondary(href="/licenceDetails/"+licenceId role="button") No additional conditions required
 
 
     div#continueBtns.inlineButtons
 
-        a.requiredButton.button(href="/reporting/"+licenceId role="button") Continue
+        a.requiredButton.button(href="/licenceDetails/"+licenceId role="button") Continue
         a.requiredButton.button.button-secondary(href="/dashboard" role="button") Back to dashboard
