Fix error page links

--- a/server/views/error.pug
+++ b/server/views/error.pug
@@ -14,4 +14,4 @@ block content
         h3 Developer mode detail
         p.code= stack
     else
-        a(href="/index") Start again
+        a(href="/dashboard") Start again
