--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -42,6 +42,10 @@ a.button.button-secondary {
     padding-bottom: 10px;
 }
 
+.midPaddingBottom {
+    padding-bottom: 20px;
+}
+
 .borderBottom {
     border-bottom: solid $grey-1 2px;
 }
@@ -80,4 +84,13 @@ a.button.button-secondary {
 
 input.small {
     max-width: 275px;
+}
+
+input.verySmall {
+    max-width: 50px;
+}
+
+.padLeftRight5 {
+    padding-left: 5px;
+    padding-right: 5px;
 }
