Moved dashboard to dependency injection approach

--- a/server/views/details/index.pug
+++ b/server/views/details/index.pug
@@ -101,4 +101,4 @@ block content
             input(type="hidden" name="_csrf" value=csrfToken)
             input(type="hidden" name="nomisId" value=nomisId)
             input.requiredButton.button(type="submit" value="Continue")
-        a.requiredButton.button.button-secondary(href="/dashboard" role="button") Back to dashboard
+        a.requiredButton.button.button-secondary(href="/" role="button") Back to dashboard
