--- a/server/views/notfound.pug
+++ b/server/views/notfound.pug
@@ -12,4 +12,4 @@ block content
             p
                 span You can
                     =" "
-                    a(href="/dashboard") Start again
+                    a(href="/") Start again
