--- a/server/views/feedback.pug
+++ b/server/views/feedback.pug
@@ -14,4 +14,4 @@ block content
 
         div.column-two-thirds
             div.back-link-container
-                a.link-back(href="#{returnURL}") Back
+                a.link-back(href= returnURL) Back
