ID for feature specs

--- a/server/views/signin.pug
+++ b/server/views/signin.pug
@@ -11,4 +11,4 @@ block content
             label.form-label(for='password') Password
             input#password.form-control(name='password', type='password', data-element-id='password')
 
-        button.button(type='submit', role='button', data-element-id="continue-button") Sign in
+        button#submit.button(type='submit', role='button', data-element-id="continue-button") Sign in
