Put full user profile in session, show user in header, add logout link

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -6,6 +6,8 @@ $path: "/public/images";
 // Take a look in /govuk-modules/_govuk-elements.scss to see which files are imported.
 @import 'govuk-elements';
 
+#proposition-links li { color: $grey-4; }
+
 a.button.button-secondary {
     color: $black;
     background-color: $grey-2;
