--- a/server/views/login.pug
+++ b/server/views/login.pug
@@ -1,7 +1,7 @@
 extends layout.pug
 
 block content
-    form(action='/signin', method='POST', class='form')
+    form(action='/login', method='POST', class='form')
         input(type="hidden" name="_csrf" value=csrfToken)
         h1(class='form-title heading-large') Sign in
         .form-group
@@ -11,4 +11,4 @@ block content
             label.form-label(for='password') Password
             input#password.form-control(name='password', type='password', data-element-id='password')
 
-        button#submit.button(type='submit', role='button', data-element-id="continue-button") Sign in
+        button#submit.button(type='submit', role='button', data-element-id="continue-button") Login
