added blue box with user detail

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -96,3 +96,26 @@ input.verySmall {
     padding-left: 5px;
     padding-right: 5px;
 }
+
+#global-header #logo.hmppslogo {
+    background: url($path+'/hmpps_logo_small.png') no-repeat;
+    background-size: 54px 48px;
+    background-position: 0 0;
+    line-height: normal;
+}
+
+#global-header .header-wrapper{
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
+#header-user {
+    float: right;
+    color: $white;
+    background-color: $govuk-blue;
+    padding: 15px;
+
+    a {
+        color: white
+    }
+}
