Add ID on heading for feature spec to use

--- a/server/views/tasklist/index.pug
+++ b/server/views/tasklist/index.pug
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
 
-    h1.heading-large Upcoming releases
+    h1#pageHeading.heading-large Upcoming releases
 
         if required
 
